name image as repo

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,4 +60,4 @@ jobs:
         with:
           context: jobs/gtfs-rt-parser
           push: true
-          tags: ghcr.io/${{github.repository}}/gtfs-rt-parser:latest
+          tags: ghcr.io/${{github.repository}}:latest
