--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,7 +46,9 @@ jobs:
           password: ${{ secrets.PYPI_API_TOKEN }}
   build_push:
     name: Package docker image
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
+    needs: checks
+    if: "github.event_name == 'release'"
     steps:
       - uses: actions/checkout@v2
       - name: Login to GitHub Container Registry
@@ -58,6 +60,5 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v2
         with:
-          context: jobs/gtfs-rt-parser
           push: true
           tags: ghcr.io/${{github.repository}}:latest
